knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/Other_Discharges_c__c.field-meta.xml
<CustomField>
    <fullName>Other_Discharges_c__c</fullName>
    <externalDeveloperName>Other_Discharges__c</externalDeveloperName>
    <label>Other Discharges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>