knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/Other_Reason_for_Leaving_FT_Position_c__c.field-meta.xml
<CustomField>
    <fullName>Other_Reason_for_Leaving_FT_Position_c__c</fullName>
    <externalDeveloperName>Other_Reason_for_Leaving_FT_Position__c</externalDeveloperName>
    <label>Other Reason for Leaving FT Position</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>