knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/Parent_c__c.field-meta.xml
<CustomField>
    <fullName>Parent_c__c</fullName>
    <externalDeveloperName>Parent__c</externalDeveloperName>
    <label>Parent</label>
    <length>18</length>
    <type>Text</type>
</CustomField>