knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/Patient_Encounters_c__c.field-meta.xml
<CustomField>
    <fullName>Patient_Encounters_c__c</fullName>
    <externalDeveloperName>Patient_Encounters__c</externalDeveloperName>
    <label>Patient Encounters</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>