knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/Placement_Fee_c__c.field-meta.xml
<CustomField>
    <fullName>Placement_Fee_c__c</fullName>
    <externalDeveloperName>Placement_Fee__c</externalDeveloperName>
    <label>Placement Fee</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>