knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/Position_Type_c__c.field-meta.xml
<CustomField>
    <fullName>Position_Type_c__c</fullName>
    <externalDeveloperName>Position_Type__c</externalDeveloperName>
    <label>Position Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>