knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/Professional_Title_c__c.field-meta.xml
<CustomField>
    <fullName>Professional_Title_c__c</fullName>
    <externalDeveloperName>Professional_Title__c</externalDeveloperName>
    <label>Professional Title</label>
    <length>4099</length>
    <type>LongTextArea</type>
</CustomField>