knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/Prospect_Score_c__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Score_c__c</fullName>
    <externalDeveloperName>Prospect_Score__c</externalDeveloperName>
    <label>HM Prospect Score</label>
    <precision>4</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>