knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/Reason_for_Leaving_FT_Position_c__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Leaving_FT_Position_c__c</fullName>
    <externalDeveloperName>Reason_for_Leaving_FT_Position__c</externalDeveloperName>
    <label>Reason for Leaving FT Position</label>
    <length>255</length>
    <type>Text</type>
</CustomField>