knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/Region_c__c.field-meta.xml
<CustomField>
    <fullName>Region_c__c</fullName>
    <externalDeveloperName>Region__c</externalDeveloperName>
    <label>Region</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>