knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/Response_Comments_c__c.field-meta.xml
<CustomField>
    <fullName>Response_Comments_c__c</fullName>
    <externalDeveloperName>Response_Comments__c</externalDeveloperName>
    <label>Response Comments</label>
    <type>TextArea</type>
</CustomField>