knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/Response_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Response_Date_c__c</fullName>
    <externalDeveloperName>Response_Date__c</externalDeveloperName>
    <label>Response Date</label>
    <type>Date</type>
</CustomField>