knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/Services_c__c.field-meta.xml
<CustomField>
    <fullName>Services_c__c</fullName>
    <externalDeveloperName>Services__c</externalDeveloperName>
    <label>Services</label>
    <length>255</length>
    <type>Text</type>
</CustomField>