knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/Source_c__c.field-meta.xml
<CustomField>
    <fullName>Source_c__c</fullName>
    <externalDeveloperName>Source__c</externalDeveloperName>
    <label>Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>