knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/Sourcing_Budget_Fee_c__c.field-meta.xml
<CustomField>
    <fullName>Sourcing_Budget_Fee_c__c</fullName>
    <externalDeveloperName>Sourcing_Budget_Fee__c</externalDeveloperName>
    <label>Sourcing Budget Fee</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>