knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/Specialty_c__c.field-meta.xml
<CustomField>
    <fullName>Specialty_c__c</fullName>
    <externalDeveloperName>Specialty__c</externalDeveloperName>
    <label>Specialty</label>
    <length>255</length>
    <type>Text</type>
</CustomField>