knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/StageName__c.field-meta.xml
<CustomField>
    <fullName>StageName__c</fullName>
    <externalDeveloperName>StageName</externalDeveloperName>
    <label>Stage</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>