knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/Swing_Beds_c__c.field-meta.xml
<CustomField>
    <fullName>Swing_Beds_c__c</fullName>
    <externalDeveloperName>Swing_Beds__c</externalDeveloperName>
    <label>Swing Beds</label>
    <length>255</length>
    <type>Text</type>
</CustomField>