knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/Total_Discharges_c__c.field-meta.xml
<CustomField>
    <fullName>Total_Discharges_c__c</fullName>
    <externalDeveloperName>Total_Discharges__c</externalDeveloperName>
    <label>Total Discharges</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>0</scale>
    <type>Number</type>
</CustomField>