knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/Tracking_Number_c__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Number_c__c</fullName>
    <externalDeveloperName>Tracking_Number__c</externalDeveloperName>
    <label>Tracking Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>