knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/Trial_End_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Trial_End_Date_c__c</fullName>
    <externalDeveloperName>Trial_End_Date__c</externalDeveloperName>
    <label>Trial End Date</label>
    <type>Date</type>
</CustomField>