knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/tsgjobspecialties_c__c.field-meta.xml
<CustomField>
    <fullName>tsgjobspecialties_c__c</fullName>
    <externalDeveloperName>tsgjobspecialties__c</externalDeveloperName>
    <label>Specialties</label>
    <length>4099</length>
    <type>LongTextArea</type>
</CustomField>