knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity__x/fields/Win_Loss_Reason_c__c.field-meta.xml
<CustomField>
    <fullName>Win_Loss_Reason_c__c</fullName>
    <externalDeveloperName>Win_Loss_Reason__c</externalDeveloperName>
    <label>Win/Loss Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>